<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/emailLoginId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textSize="15sp"

        android:backgroundTint="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/passwordLoginId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/passHint"
        android:inputType="textPassword"
        android:backgroundTint="#000000"
        android:textSize="15sp"

        android:textStyle="bold"
        tools:targetApi="o" />

    <Button
        android:id="@+id/loginButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"

        android:background="@color/buttoncolor1"
        android:gravity="center"
        android:text="@string/log"
        android:textColor="#ffffff"

        android:textSize="20sp"
        android:textStyle="bold"


        />

    <TextView
        android:layout_width="327dp"
        android:layout_height="wrap_content"

        android:layout_margin="20dp"

        android:gravity="center"

        android:text="@string/or"
        />

    <Button
        android:id="@+id/loginGoogleId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"

        android:background="@color/buttoncolor1"
        android:gravity="center"
        android:text="@string/google"
        android:textColor="#ffffff"

        android:textSize="20sp"
        android:textStyle="bold"


        />

    <Button
        android:id="@+id/loginFacebookId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"

        android:background="@color/buttoncolor1"
        android:gravity="center"
        android:text="@string/facebook"
        android:textColor="#ffffff"

        android:textSize="20sp"
        android:textStyle="bold"


        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="38dp"
            android:text="@string/don_t_have_an_account"
            android:textSize="15sp" />

        <Button
            android:id="@+id/signupButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="30dp"
            android:background="@color/buttoncolor1"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textSize="15sp"

            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarLoginId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />


</LinearLayout>